--- a/LoggedOut.html
+++ b/LoggedOut.html
@@ -127,7 +127,7 @@
              <img class="main-thumb-img mob" src="img2/loggedOutHero_mobile.png" alt="main hero mobile" width="640" height="375" />
               <div class="heroText">
                 <h1>It's Time to Get Rewarded</h1>
-                <p>Redeem great prizes, savings coupons, and perks, it's easy to earn and free to join!</p>
+                <p>Redeem rewards points for great prizes, coupons, and other perks. It's easy to earn and free to join!</p>
              </div>
 		<!-- 
              <a class="signUpNow" href="#">
